# model/task.go
@@ -2,7 +2,7 @@ package model
 
 import "time"
 
-type Todo struct {
+type Task struct {
 	ID        int64     `json:"id" example:"1"`
 	Title     string    `json:"title" example:"Buy milk"`
 	Done      bool      `json:"done" example:"false"`
@@ -10,11 +10,11 @@ type Todo struct {
 	UpdatedAt time.Time `json:"updated_at"`
 }
 
-type CreateTodoInput struct {
+type CreateTaskInput struct {
 	Title string `json:"title" binding:"required,min=1,max=500" example:"Buy milk"`
 }
 
-type UpdateTodoInput struct {
+type UpdateTaskInput struct {
 	Title string `json:"title" binding:"required,min=1,max=500" example:"Buy milk"`
 	Done  bool   `json:"done" example:"true"`
 }
